--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="conteyner">
+        <div class="sign conteyner">
+            <p class="sign__paragrf">Financing option available at checkout.</p>
+        </div>
 
+        <header class="header">
+            
+        </header>
     </div>
 </body>
 </html>
