--- a/index.html
+++ b/index.html
@@ -62,8 +62,14 @@
             </div>
         </div>
 
-        <div >
+        <div class="brend">
+            <img src="image/Rectangle (2).png" alt="image">
 
+            <img src="image/Rectangle (2).png" alt="image">
+
+            <img src="image/Rectangle (2).png" alt="image">
+
+            <img src="image/Rectangle (2).png" alt="image">
         </div>
 
         <div class="hero conteyner">
