--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <h2 class="hero__text">Looking for Boosted Boards, or Boosted Revs?</h2>
 
             <p class="hero__paragrf">Boosted USA acquired all of the remaining inventory directly from Boosted.  This means we have the electric skateboards and scooter you all love and have been looking for.  Get your hands on these highly sought after products while supplies last.</p>
+
+            <div class="hero__line"></div>
         </div>
     </div>
 </body>
