--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                 <button class="section2__btn">Shop Now</button>
             </div>
         </div>
+
+        <div class="images">
+
+        </div>
     </div>
 </body>
 </html>
