--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
         </div>
 
         <div class="images">
+            <div class="images__box">
+                <p class="images__box--paragrf">Shop Boosted Stealth</p>
 
+                <p class="images__box--paragrff">IN STOCK</p>
+            </div>
         </div>
     </div>
 </body>
