--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
         </div>
 
-        <div class="images">
+        <div class="images conteyner">
             <div class="images__box">
                 <p class="images__box--paragrf">Shop Boosted Stealth</p>
 
