--- a/index.html
+++ b/index.html
@@ -129,21 +129,27 @@
 
         <div class="images conteyner">
             <div class="images__box">
-                <p class="images__box--paragrf">Shop Boosted Stealth</p>
+                <div>
+                    <p class="images__box--paragrf">Shop Boosted Stealth</p>
 
-                <p class="images__box--paragrff">IN STOCK</p>
+                    <p class="images__box--paragrff">IN STOCK</p>
+                </div>
             </div>
 
-            <div class="images__box">
-                <p class="images__box--paragrf">Shop Boosted Stealth</p>
+            <div class="images__box box22">
+                <div>
+                    <p class="images__box--paragrf">Shop Boosted Stealth</p>
 
-                <p class="images__box--paragrff">IN STOCK</p>
+                    <p class="images__box--paragrff">IN STOCK</p>
+                </div>
             </div>
 
-            <div class="images__box">
-                <p class="images__box--paragrf">Shop Boosted Stealth</p>
+            <div class="images__box box3">
+                <div>
+                    <p class="images__box--paragrf">Shop Boosted Stealth</p>
 
-                <p class="images__box--paragrff">IN STOCK</p>
+                    <p class="images__box--paragrff">IN STOCK</p>
+                </div>
             </div>
         </div>
     </div>
