--- a/index.html
+++ b/index.html
@@ -162,6 +162,33 @@
 
                 <p class="cards__card--paragrf">Boosted is known for its premium performance boards offering a next-level experience.</p>
             </div>
+
+            <!-- 2 -->
+            <div class="cards__card">
+                <img src="icon/Rectangle (14).png" alt="icon">
+
+                <h3 class="cards__card--text">Go Far</h3>
+
+                <p class="cards__card--paragrf">With optional extended battery life, you can get wherever you need to go reliably.</p>
+            </div>
+
+            <!-- 3 -->
+            <div class="cards__card">
+                <img src="icon/Rectangle (14).png" alt="icon">
+
+                <h3 class="cards__card--text">Go Safe</h3>
+
+                <p class="cards__card--paragrf">Safety is a #1 priority for Boosted, always wear a helmet when riding.</p>
+            </div>
+
+            <!-- 4 -->
+            <div class="cards__card">
+                <img src="icon/Rectangle (14).png" alt="icon">
+
+                <h3 class="cards__card--text">Built to Last!</h3>
+
+                <p class="cards__card--paragrf">Boosted products are engineered to last for years and are extremely reliable.</p>
+            </div>
         </div>
     </div>
 </body>
