--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-        <div class="cards">
+        <div class="cards conteyner">
             <!-- 1 -->
             <div class="cards__card">
                 <img src="icon/Rectangle (14).png" alt="icon">
