--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
             <!-- 2 -->
             <div class="cards__card">
-                <img src="icon/Rectangle (14).png" alt="icon">
+                <img src="icon/Rectangle (15).png" alt="icon">
 
                 <h3 class="cards__card--text">Go Far</h3>
 
@@ -174,7 +174,7 @@
 
             <!-- 3 -->
             <div class="cards__card">
-                <img src="icon/Rectangle (14).png" alt="icon">
+                <img src="icon/Rectangle (16).png" alt="icon">
 
                 <h3 class="cards__card--text">Go Safe</h3>
 
@@ -183,13 +183,46 @@
 
             <!-- 4 -->
             <div class="cards__card">
-                <img src="icon/Rectangle (14).png" alt="icon">
+                <img src="icon/Rectangle (17).png" alt="icon">
 
                 <h3 class="cards__card--text">Built to Last!</h3>
 
                 <p class="cards__card--paragrf">Boosted products are engineered to last for years and are extremely reliable.</p>
             </div>
         </div>
+
+        <!-- footer -->
+        <footer class="footer conteyner">
+            <!-- 1 -->
+            <div class="footer__box">
+                <img src="icon/Rectangle (18).png" alt="long">
+            </div>
+
+            <!-- 2 -->
+            <div class="footer__box2">
+                <h4 class="footer__box2--text">Explore</h4>
+
+                <ul class="footer__box2--ul">
+                    <li>Electric Skateboards</li>
+                    <li>Electric Scooters</li>
+                    <li>Accessories</li>
+                    <li>FAQs</li>
+                    <li>Warranty</li>
+                    <li>Quick Start Guide</li>
+                    <li>Contact</li>
+                    <li>Gift Card</li>
+                    <li>Accessibility Statement</li>
+                </ul>
+            </div>
+
+            <div class="footer__box2">
+                <h4 class="footer__box2--text">About Boosted USA</h4>
+
+                <p class="footer__box2--paragrf">Boosted empowers people everywhere to commute across their cities, campuses, and communities in ways that were never before possible. Boosted is solving one of the biggest problems people face each day: transportation.</p>
+
+                <p class="footer__box2--paragrff">CaliRides LLC - DBA Boosted USA 1281 Andersen Drive Ste. K San Rafael, CA 94901</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
