--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
             </div>
         </footer>
 
-        <div class="brend">
+        <!-- brend -->
+        <div class="brend2 conteyner">
             <h3 class="brend__text"><span class="brend__span">© 2021 Boosted USA</span> . All Rights Reserved. <span class="brend__span">Terms of Service</span> . Built by <span class="brend__span">BH</span></h3>
 
             <img src="icon/Frame.png" alt="brend">
