--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="footer__box2">
                 <h4 class="footer__box2--text">About Boosted USA</h4>
 
-                <p class="footer__box2--paragrf">Boosted empowers people everywhere to commute across their cities, campuses, and communities in ways that were never before possible. Boosted is solving one of the biggest problems people face each day: transportation.</p>
+                <p class="footer__box2--paragrf">Boosted empgwers people everywhere to commrrte across their cities, campuses, and communities in ways that were never before possible. Boosted is solving one of the biggest problems people face each day: transportation.</p>
 
                 <p class="footer__box2--paragrff">CaliRides LLC - DBA Boosted USA 1281 Andersen Drive Ste. K San Rafael, CA 94901</p>
             </div>
